--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,12 @@ Title: Personal RStudio Addins
 Version: 0.0.0.9000
 Description: Collection of helpful RStudio Addins
 Depends: R (>= 3.1)
+Imports: 
+    rstudioapi
 Suggest: 
     knitr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
+
